appId: dev.noboil.mobile.convex.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "create-blog-submit"
- assertVisible:
    id: "crud-dynamic-page"
