appId: dev.noboil.mobile.convex.chat
---
- launchApp
- assertVisible:
    id: "chat-home-page"
- tapOn:
    id: "public-toggle"
- assertVisible:
    id: "public-toggle"
- assertVisible:
    id: "public-toggle"
